log
Wed Apr 15 04:10:22 AM UTC 2026: 
 tests:  0|7
total_score: 0/60
e893cc3
Wed Apr 15 04:14:00 AM UTC 2026: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:48:48: error: ‘HasMap’ undeclared (first use in this function); did you mean ‘HashMap’?
   48 |     HashMap* newMap = (HashMap*) malloc(sizeof(HasMap));
      |                                                ^~~~~~
      |                                                HashMap
hashmap.c:48:48: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:49:11: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘pairs’
   49 |     newMap->pairs = NULL;
      |           ^~
hashmap.c:50:18: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   50 |     newMap->size = NULL;
      |                  ^
36166b8
Wed Apr 15 04:14:16 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:11: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘pairs’
   49 |     newMap->pairs = NULL;
      |           ^~
hashmap.c:50:18: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   50 |     newMap->size = NULL;
      |                  ^
2d60705
Wed Apr 15 04:14:57 AM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:11: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘Pair’
   49 |     newMap->Pair = NULL;
      |           ^~
6b18da6
Wed Apr 15 04:15:19 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
8c832fa
Wed Apr 15 04:15:38 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2d1bd53
Wed Apr 15 04:18:45 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:32: error: too few arguments to function ‘calloc’
   49 |     newMap->buckets = (Pair**) calloc(sizeof(Pair*));
      |                                ^~~~~~
In file included from test.c:2:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/stdlib.h:675:14: note: declared here
  675 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
5941ecb
Wed Apr 15 04:19:04 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
9728e48
Thu Apr 16 07:50:20 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:21: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Wincompatible-pointer-types]
   49 |     newMap->buckets = (Pair*) calloc(capacity, sizeof(Pair));
      |                     ^
1b007e4
Thu Apr 16 08:04:06 PM UTC 2026: 
 hashmap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:74:22: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Wint-conversion]
   74 |         map->current = map->buckets[pos];
      |                      ^
hashmap.c:76:12: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
   76 |     return map;
      |            ^~~
hashmap.c:65:6: note: declared here
   65 | void insertMap(HashMap * map, char * key, void * value) {
      |      ^~~~~~~~~
264d261
Thu Apr 16 08:04:22 PM UTC 2026: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:74:22: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Wint-conversion]
   74 |         map->current = map->buckets[pos];
      |                      ^
6f789c9
